src/test/deca/context/valid/print/printx-carac-spe.deca
// Description:
//    Programme minimaliste utilisant printx.
//
// Resultats:
//    '

{
    printx(" \" ");
}