src/test/deca/context/invalid/print/printx-n.deca
// Description:
//    Programme minimaliste utilisant printx.
//
// Resultats:
//    erreur ligne 8

{
    printx("\n");
}
